--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Sistema de cadastro de jogos</h1>
     <script src="app.js"></script>
     <h3>Angelo Gabriel</h3>
+    <h2>Atualizando</h2>
 </body>
 </html>
